##
# rainmaker HTTP load generator
# Copyright (c) 2010 Shahar Evron
#
# rainmaker is free / open source software, available under the terms of the
# New BSD License. See COPYING for license details.
##

# Shared data files Makefile.am

rmsharedir = $(datadir)/@PACKAGE@
rmshare_DATA = rainmaker-scenario-1.0.xsd
